--- a/pipe/gitlab-ci.yaml
+++ b/pipe/gitlab-ci.yaml
@@ -1,5 +1,3 @@
-image: maven:3.8.6-jdk21-alpine
-
 stages:
   - build
   - test
@@ -14,6 +12,7 @@ cache:
     - .m2/repository
 
 build:
+  image: maven:3.8.6-openjdk-18
   stage: build
   tags:
     - messenger
@@ -25,6 +24,7 @@ build:
     expire_in: 1 day
 
 test:
+  image: maven:3.8.6-openjdk-18
   stage: test
   tags:
     - messenger
