--- a/pipe/gitlab-ci.yaml
+++ b/pipe/gitlab-ci.yaml
@@ -1,6 +1,7 @@
 stages:
   - build
   - test
+  - sonar-check
 
 variables:
   MAVEN_OPTS: "-Dmaven.repo.local=.m2/repository"
@@ -15,6 +16,7 @@ cache:
 
 sonarcloud-check:
   image: maven:3-openjdk-17
+  stage: sonar-check
   cache:
     key: "${CI_JOB_NAME}"
     paths:
