--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,4 +5,7 @@ spring.jpa.hibernate.ddl-auto=update
 
 spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
 spring.freemarker.expose-request-attributes=true
-server.port=8088
+server.port=8080
+
+jwt.secret=token
+jwt.expiration=86400
