--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,11 +1,8 @@
-spring.datasource.url=jdbc:postgresql://messenger-db:5432/messenger_db
+spring.datasource.url=jdbc:postgresql://localhost:5433/messenger_db
 spring.datasource.username=postgres
-spring.datasource.password=postgres
+spring.datasource.password=admin
 spring.jpa.hibernate.ddl-auto=update
 
 spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
 spring.freemarker.expose-request-attributes=true
 server.port=8080
-
-jwt.secret=token
-jwt.expiration=86400
