--- a/pipe/gitlab-ci.yaml
+++ b/pipe/gitlab-ci.yaml
@@ -3,14 +3,29 @@ stages:
   - test
   - sonar-check
   - quality-check
+  - create-mr
 
 variables:
+  # Отключаем стандартный clone из GitLab
+  GIT_STRATEGY: none
+
   MAVEN_OPTS: "-Dmaven.repo.local=.m2/repository"
   MAVEN_CLI_OPTS: "--batch-mode --errors --fail-at-end --show-version"
-  SONAR_USER_HOME: "${CI_PROJECT_DIR}/.sonar"  # Defines the location of the analysis task cache
-  GIT_DEPTH: "0"  # Tells git to fetch all the branches of the project, required by the analysis task
-  SONAR_PROJECT_KEY: "DeepPK_messenger"
+  SONAR_USER_HOME: "${CI_PROJECT_DIR}/.sonar"
+  SONAR_PROJECT_KEY: "simple_messenger"
   MAX_ATTEMPTS: "10"
+
+  # GitHub repo (публичный — без токена)
+  GITHUB_REPO: "https://github.com/khkhlv/simple-messenger.git"
+
+# Клонируем актуальный код из GitHub перед всеми job'ами
+before_script:
+  - echo "Cloning from GitHub..."
+  - git init
+  - git remote add origin $GITHUB_REPO
+  - git fetch --depth=1 origin master
+  - git checkout FETCH_HEAD
+  - echo "Checked out commit: $(git rev-parse HEAD)"
 
 cache:
   key: maven
@@ -50,12 +65,12 @@ sonar-check:
     - messenger
   script:
     - mvn clean install
-    - mvn sonar:sonar
-      -Dsonar.tests=src/test/java/ru/khkhlv
-      -Dsonar.projectKey=$SONAR_PROJECT_KEY
-      -Dsonar.host.url=$SONAR_HOST_URL
-      -Dsonar.login=$SONAR_TOKEN
-      -Dsonar.coverage.jacoco.xmlReportPaths=target/site/jacoco/jacoco.xml
+    - mvn sonar:sonar \
+      -Dsonar.tests=src/test/java/ru/khkhlv \
+      -Dsonar.projectKey=$SONAR_PROJECT_KEY \
+      -Dsonar.host.url=$SONAR_HOST_URL \
+      -Dsonar.login=$SONAR_TOKEN \
+      -Dsonar.coverage.jacoco.xmlReportPaths=target/site/jacoco/jacoco.xml \
       -Dsonar.qualitygate.wait=true
   dependencies:
     - test
@@ -65,6 +80,8 @@ check-metrics:
   stage: quality-check
   tags:
     - messenger
+  before_script:
+    - apk add --no-cache jq curl bc
   script:
     - sleep 30
     - |
@@ -74,35 +91,55 @@ check-metrics:
 
       while [ $ATTEMPT -lt $MAX_ATTEMPTS ]; do
         STATUS=$(curl -s -u "$SONAR_TOKEN": "$SONAR_HOST_URL/api/qualitygates/project_status?projectKey=$PROJECT_KEY" | jq -r '.projectStatus.status')
-      
         if [ "$STATUS" = "OK" ]; then
           echo "Quality Gate passed"
-          break
+          exit 0
         elif [ "$STATUS" = "ERROR" ]; then
           echo "Quality Gate failed"
           exit 1
         fi
-
         sleep 30
         ATTEMPT=$((ATTEMPT+1))
       done
 
-      if [ $ATTEMPT -eq $MAX_ATTEMPTS ]; then
-        echo "Timeout waiting for Quality Gate"
-        exit 1
-      fi
+      echo "Timeout waiting for Quality Gate"
+      exit 1
 
-      COVERAGE=$(curl -s -u "$SONAR_TOKEN": "$SONAR_HOST_URL/api/measures/component?component=$PROJECT_KEY&metricKeys=coverage" | jq -r '.component.measures[0].value')
-      if [ "$COVERAGE" = "null" ]; then
-        echo "Coverage data unavailable"
-        exit 1
-      elif [ $(echo "$COVERAGE < 80" | bc) -eq 1 ]; then
-        echo "Code coverage $COVERAGE% < 80%"
-        exit 1
-      fi
+create-merge-request:
+  stage: create-mr
+  image: alpine:latest
+  tags:
+    - messenger
+  before_script:
+    - apk add --no-cache curl jq
+  script:
+    - |
+      # Этот job запускается только при триггере на master
+      # Но так как мы используем GIT_STRATEGY: none, ветка — не из GitLab
+      # Поэтому мы всегда создаём MR из master → main
 
-      CRITICAL_ISSUES=$(curl -s -u "$SONAR_TOKEN": "$SONAR_HOST_URL/api/issues/search?componentKeys=$PROJECT_KEY&severities=CRITICAL" | jq -r '.total')
-      if [ "$CRITICAL_ISSUES" -gt 0 ]; then
-        echo "Found $CRITICAL_ISSUES critical issues"
-        exit 1
+      PROJECT_ID_ENCODED=$(echo "$CI_PROJECT_PATH" | jq -sRr '@uri')
+      SOURCE_BRANCH="master"
+      TARGET_BRANCH="main"
+      MR_TITLE="Sync from GitHub master"
+
+      EXISTING_MR=$(curl -s --header "PRIVATE-TOKEN: $GITLAB_API_TOKEN" \
+        "https://gitlab.com/api/v4/projects/$PROJECT_ID_ENCODED/merge_requests?source_branch=$SOURCE_BRANCH&target_branch=$TARGET_BRANCH&state=opened")
+
+      MR_IID=$(echo "$EXISTING_MR" | jq -r '.[0].iid // empty')
+
+      if [ -n "$MR_IID" ]; then
+        echo "MR !${MR_IID} already exists — skipping creation"
+      else
+        echo "Creating MR from $SOURCE_BRANCH → $TARGET_BRANCH"
+        curl --fail -X POST \
+          --header "PRIVATE-TOKEN: $GITLAB_API_TOKEN" \
+          --form "source_branch=$SOURCE_BRANCH" \
+          --form "target_branch=$TARGET_BRANCH" \
+          --form "title=$MR_TITLE" \
+          --form "remove_source_branch=false" \
+          --form "squash=false" \
+          "https://gitlab.com/api/v4/projects/$PROJECT_ID_ENCODED/merge_requests"
       fi
+  rules:
+    - if: '$CI_PIPELINE_SOURCE == "trigger"'  # запускается только при триггере из GitHub
