--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-spring.datasource.url=jdbc:postgresql://localhost:5433/messenger_db
+spring.datasource.url=jdbc:postgresql://localhost:5432/messenger_db
 spring.datasource.username=postgres
 spring.datasource.password=admin
 spring.jpa.hibernate.ddl-auto=update
@@ -6,3 +6,10 @@ spring.jpa.hibernate.ddl-auto=update
 spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
 spring.freemarker.expose-request-attributes=true
 server.port=8080
+
+logging.level.org.springframework.web=DEBUG
+logging.level.org.springframework.security=DEBUG
+logging.level.ru.khkhlv.messenger=DEBUG
+logging.level.ru.khkhlv.messenger.configuration.JwtAuthenticationFilter=DEBUG
+logging.level.org.hibernate.SQL=DEBUG
+logging.level.org.springframework.security.web.FilterChainProxy=DEBUG
