--- a/pipe/gitlab-ci.yaml
+++ b/pipe/gitlab-ci.yaml
@@ -21,12 +21,18 @@ variables:
 
 # Клонируем актуальный код из GitHub перед всеми job'ами
 before_script: |
-  echo "Cloning from GitHub..."
+  set -e
+  echo "=== Fetching fresh code from GitHub ==="
+  rm -rf "$CI_PROJECT_DIR"/*
+  rm -rf "$CI_PROJECT_DIR"/.*
+  mkdir -p "$CI_PROJECT_DIR"
+  cd "$CI_PROJECT_DIR"
   git init
-  git remote add origin $GITHUB_REPO
+  git remote add origin "$GITHUB_REPO"
   git fetch --depth=1 origin master
-  git checkout FETCH_HEAD
-  echo "Checked out commit: $(git rev-parse HEAD)"
+  git checkout -f FETCH_HEAD
+  git submodule update --init --recursive || true
+  echo "✅ Checked out commit: $(git rev-parse HEAD)"
 
 cache:
   key: maven
