--- a/pipe/gitlab-ci.yaml
+++ b/pipe/gitlab-ci.yaml
@@ -10,6 +10,7 @@ variables:
   MAVEN_CLI_OPTS: "--batch-mode --errors --fail-at-end --show-version"
   SONAR_USER_HOME: "${CI_PROJECT_DIR}/.sonar"
   SONAR_PROJECT_KEY: "hohlov.aleksandr.a_simple-messenger"
+  SONAR_ORGANIZATION: "hohlov-aleksandr-a"
   SONAR_HOST_URL: "https://sonarcloud.io"
   SONAR_TOKEN: "03d38910ab8714114ceb23c7689c3db0bb73a180"
   MAX_ATTEMPTS: "10"
@@ -54,14 +55,14 @@ sonar-check:
     - messenger
   script:
     - mvn clean install
-    - |
-      mvn sonar:sonar \
-      -Dsonar.tests=src/test/java/ru/khkhlv \
-      -Dsonar.organization=hohlov-aleksandr-a \
-      -Dsonar.projectKey=$SONAR_PROJECT_KEY \
-      -Dsonar.host.url=$SONAR_HOST_URL \
-      -Dsonar.login=$SONAR_TOKEN \
-      -Dsonar.coverage.jacoco.xmlReportPaths=target/site/jacoco/jacoco.xml \
+    - >
+      mvn sonar:sonar
+      -Dsonar.tests=src/test/java/ru/khkhlv
+      -Dsonar.organization=$SONAR_ORGANIZATION
+      -Dsonar.projectKey=$SONAR_PROJECT_KEY
+      -Dsonar.host.url=$SONAR_HOST_URL
+      -Dsonar.login=$SONAR_TOKEN
+      -Dsonar.coverage.jacoco.xmlReportPaths=target/site/jacoco/jacoco.xml
       -Dsonar.qualitygate.wait=true
   dependencies:
     - test
