--- a/.github/workflows/sync-to-gitlab.yml
+++ b/.github/workflows/sync-to-gitlab.yml
@@ -18,4 +18,4 @@ jobs:
           GITLAB_TOKEN: ${{ secrets.GITLAB_PUSH_TOKEN }}
         run: |
           git remote add gitlab https://oauth2:${GITLAB_TOKEN}@gitlab.com/hohlov.aleksandr.a/simple-messenger.git
-          git push --force gitlab HEAD:master
+          git push --force gitlab HEAD:main
