--- a/pipe/gitlab-ci.yaml
+++ b/pipe/gitlab-ci.yaml
@@ -12,9 +12,9 @@ variables:
   SONAR_PROJECT_KEY: "hohlov.aleksandr.a_simple-messenger"
   SONAR_ORGANIZATION: "hohlov-aleksandr-a"
   SONAR_HOST_URL: "https://sonarcloud.io"
-  SONAR_TOKEN: "8d8db1fcb82fa3316a9c05aa2c6014c008cd581c"
   DOCKER_HUB_REPO: "khkhlv/messenger"
   DOCKER_IMAGE_TAG: "$CI_COMMIT_SHORT_SHA"
+  DOCKER_HUB_USER: "khkhlv"
 
 cache:
   key: maven
