--- a/pipe/gitlab-ci.yaml
+++ b/pipe/gitlab-ci.yaml
@@ -53,7 +53,16 @@ sonar-check:
   tags:
     - messenger
   script:
-    - mvn verify org.sonarsource.scanner.maven:sonar-maven-plugin:sonar -Dsonar.tests=src/test/java/ru/khkhlv -Dsonar.organization=$SONAR_ORGANIZATION -Dsonar.projectKey=$SONAR_PROJECT_KEY -Dsonar.host.url=$SONAR_HOST_URL -Dsonar.login=$SONAR_TOKEN -Dsonar.coverage.jacoco.xmlReportPaths=target/site/jacoco/jacoco.xml
+    - mvn verify sonar:sonar \
+      -Dsonar.organization=$SONAR_ORGANIZATION \
+      -Dsonar.projectKey=$SONAR_PROJECT_KEY \
+      -Dsonar.host.url=$SONAR_HOST_URL \
+      -Dsonar.token=$SONAR_TOKEN \
+      -Dsonar.sources=src/main/java \
+      -Dsonar.tests=src/test/java \
+      -Dsonar.java.binaries=target/classes \
+      -Dsonar.java.test.binaries=target/test-classes \
+      -Dsonar.coverage.jacoco.xmlReportPaths=target/site/jacoco/jacoco.xml
   dependencies:
     - test
 
@@ -70,7 +79,7 @@ check-metrics:
       sleep 10
 
       PROJECT_KEY="$SONAR_PROJECT_KEY"
-      MAX_ATTEMPTS=10
+      MAX_ATTEMPTS=5
       ATTEMPT=0
 
       while [ $ATTEMPT -lt $MAX_ATTEMPTS ]; do
@@ -83,7 +92,7 @@ check-metrics:
           echo "❌ Quality Gate failed"
           exit 1
         fi
-        sleep 30
+        sleep 10
         ATTEMPT=$((ATTEMPT+1))
       done
 
