--- a/pipe/gitlab-ci.yaml
+++ b/pipe/gitlab-ci.yaml
@@ -1,8 +1,8 @@
 stages:
-  - build
-  - test
   - sonar-check
   - quality-check
+  - build
+  - test
   - docker
 
 variables:
@@ -53,15 +53,15 @@ sonar-check:
   tags:
     - messenger
   script:
-    - mvn verify sonar:sonar \
-      -Dsonar.organization=$SONAR_ORGANIZATION \
-      -Dsonar.projectKey=$SONAR_PROJECT_KEY \
-      -Dsonar.host.url=$SONAR_HOST_URL \
-      -Dsonar.token=$SONAR_TOKEN \
-      -Dsonar.sources=src/main/java \
-      -Dsonar.tests=src/test/java \
-      -Dsonar.java.binaries=target/classes \
-      -Dsonar.java.test.binaries=target/test-classes \
+    -> mvn verify sonar:sonar
+      -Dsonar.organization=$SONAR_ORGANIZATION
+      -Dsonar.projectKey=$SONAR_PROJECT_KEY
+      -Dsonar.host.url=$SONAR_HOST_URL
+      -Dsonar.token=$SONAR_TOKEN
+      -Dsonar.sources=src/main/java
+      -Dsonar.tests=src/test/java
+      -Dsonar.java.binaries=target/classes
+      -Dsonar.java.test.binaries=target/test-classes
       -Dsonar.coverage.jacoco.xmlReportPaths=target/site/jacoco/jacoco.xml
   dependencies:
     - test
