--- a/cloud/playbook.yml
+++ b/cloud/playbook.yml
@@ -78,7 +78,7 @@
 
     - name: Запуск Minikube (в фоне, с Docker в качестве драйвера)
       command: minikube start --driver=docker --container-runtime=docker --memory=2000m
-      become: no
+      become: yes
       environment:
         CHANGE_MINIKUBE_NONE_USER: "true"
       register: minikube_start
