--- a/pipe/gitlab-ci.yaml
+++ b/pipe/gitlab-ci.yaml
@@ -101,7 +101,6 @@ docker:
     - name: docker:24-dind
       alias: docker
   variables:
-    DOCKER_HOST: tcp://docker:2375
     DOCKER_TLS_CERTDIR: ""  # отключаем TLS для dind в CI
   before_script:
     - echo "$DOCKER_HUB_TOKEN" | docker login -u "$DOCKER_HUB_USER" --password-stdin
@@ -109,7 +108,7 @@ docker:
     - docker build -t "$DOCKER_HUB_REPO:$DOCKER_IMAGE_TAG" .
     - docker push "$DOCKER_HUB_REPO:$DOCKER_IMAGE_TAG"
     - |
-      if [ "$CI_COMMIT_BRANCH" = "master" ]; then
+      if [ "$CI_COMMIT_BRANCH" = "main" ]; then
         docker tag "$DOCKER_HUB_REPO:$DOCKER_IMAGE_TAG" "$DOCKER_HUB_REPO:latest"
         docker push "$DOCKER_HUB_REPO:latest"
       fi
