--- a/pipe/gitlab-ci.yaml
+++ b/pipe/gitlab-ci.yaml
@@ -109,7 +109,7 @@ docker:
   script:
     - docker build -t "$DOCKER_HUB_BACKEND_REPO:latest" .
     - docker push "$DOCKER_HUB_BACKEND_REPO:latest"
-    - docker build -t "$DOCKER_HUB_FRONTEND_REPO:latest" frontend/.
+    - docker build -t "$DOCKER_HUB_FRONTEND_REPO:latest" -f frontend/Dockerfile frontend/
     - docker push "$DOCKER_HUB_FRONTEND_REPO:latest"
 
   after_script:
