--- a/pipe/gitlab-ci.yaml
+++ b/pipe/gitlab-ci.yaml
@@ -71,18 +71,18 @@ test-frontend:
     - messenger
   script:
     - cd frontend
-    - npm ci --cache .npm --prefer-offline
-    - npm test --if-present -- --passWithNoTests
+    - npm ci
+    - npm test
     - npm run lint --if-present
     - npm run type-check --if-present
-  artifacts:
-    when: always
-    reports:
-      junit:
-        - frontend/junit.xml
-        - frontend/test-results.xml
-    paths:
-      - frontend/coverage/
+#  artifacts:
+#    when: always
+#    reports:
+#      junit:
+#        - frontend/junit.xml
+#        - frontend/test-results.xml
+#    paths:
+#      - frontend/coverage/
   needs: ["build-frontend"]
 
 #sonar-check:
