add FF_DISABLE_UMASK_FOR_DOCKER_EXECUTOR: "true"

--- a/pipe/gitlab-ci.yaml
+++ b/pipe/gitlab-ci.yaml
@@ -21,6 +21,7 @@ variables:
   ARGOCD_USERNAME: "admin"
   ARGOCD_PASSWORD: "u9ZAESKII0lrCVoV"
   ARGOCD_SERVER: "https://localhost:8000"
+  FF_DISABLE_UMASK_FOR_DOCKER_EXECUTOR: "true"
 
 cache:
   key: maven
