fix: update ARGOCD_SERVER

--- a/pipe/gitlab-ci.yaml
+++ b/pipe/gitlab-ci.yaml
@@ -20,7 +20,7 @@ variables:
   DOCKER_HUB_USER: "khkhlv"
   ARGOCD_USERNAME: "admin"
   ARGOCD_PASSWORD: "u9ZAESKII0lrCVoV"
-  ARGOCD_SERVER: "localhost:8000"
+  ARGOCD_SERVER: "192.168.49.2:30535"
   FF_DISABLE_UMASK_FOR_DOCKER_EXECUTOR: "true"
 
 cache:
